--- a/Basketball_Scout_App/pubspec.yaml
+++ b/Basketball_Scout_App/pubspec.yaml
@@ -45,8 +45,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/point_guard.jpeg
+    - assets/images/shooting_guard.jpeg
+    - assets/images/small_forward.jpg
+    - assets/images/power_forward.jpg
+    - assets/images/center.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
