--- a/Basketball_Scout_App/pubspec.yaml
+++ b/Basketball_Scout_App/pubspec.yaml
@@ -23,9 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite:
-  path:
-
+  flappy_search_bar: 1.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,6 +51,11 @@ flutter:
     - assets/images/small_forward.jpg
     - assets/images/power_forward.jpg
     - assets/images/center.jpeg
+    - assets/images/avatars/danny_green.png
+    - assets/images/avatars/jayson_tatum.png
+    - assets/images/avatars/kevin_durant.png
+    - assets/images/avatars/stephen_curry.png
+    - assets/images/avatars/nikola_jokic.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -66,17 +69,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Delirium
+      fonts:
+        - asset: assets/fonts/Delirium-Regular.ttf
+    - family: Delirium-Neon
+      fonts:
+        - asset: assets/fonts/Delirium-Neon.ttf
+    - family: Jackport
+      fonts:
+        - asset: assets/fonts/Jackport-Regular.ttf
+    - family: Jackport-College
+      fonts:
+        - asset: assets/fonts/Jackport-College.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
